--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 site_title = "MyArxiv"
 limit_days = 7
-cache_url = "https://wtqwtq.github.io/MyArxiv/cache.json"
+cache_url = "https://wtqwtq.github.io/wtq_legged_papaer_daily_arxiv/cache.json"
 
 [[sources]]
 limit = 150
