--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-site_title = "MyArxiv"
+site_title = "wtq喜欢看的论文，嘻嘻嘻嘻"
 limit_days = 7
 cache_url = "https://wtqwtq.github.io/wtq_legged_papaer_daily_arxiv/cache.json"
 
