--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-site_title = "wtq_legged_paper_daily_arxiv"
+site_title = "wtq爱看的论文！"
 limit_days = 7
 cache_url = "https://wtqwtq.github.io/wtq_legged_papaer_daily_arxiv/cache.json"
 
