--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,11 @@
-site_title = "wtq爱看的论文"
+site_title = "Papers that Tianqi Wang loves to read"
 limit_days = 30
 cache_url = "https://wtqwtq.github.io/wtq_legged_papaer_daily_arxiv/cache.json"
 
 [[sources]]
 limit = 150
 category = "cs.RO"
-title = "机器人技术"
+title = "Robotics"
 
 
 [scripts]
